some updates about ddd.